Header Styling complete

--- a/index.html
+++ b/index.html
@@ -61,7 +61,26 @@
                 </ul>
             </div>
         </div>
-        <div class="header">header</div>
+        <div class="header">
+            <div class="header-section1">
+                <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"  alt=""></button>
+                <input type="text" name="searchBar" id="searchBar">
+                <button class="bellBtn btn " type="submit"><img class="btn-img" src="./images/bell.png"  alt=""></button>
+                <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"  alt=""></a>
+                <a class="nameLink  "  href="" >Manpreet Singh Khurana</a>
+            </div>
+            <div class="header-section2">
+                <a class="profileBtn2 btn " type="submit"><img class="prof-img2" src="./images/prof-img.jpeg"  alt=""></a>
+                <div class="headerText">
+                    <p class="smallText">Hi there,</p>
+                    <p class="largeText">Manpreet Singh (@mskhurana728)</p>
+                </div>
+                <button class="newBtn blueBtn">New</button>
+                <button class="uploadBtn blueBtn" >Upload</button>
+                <button class="shareBtn blueBtn">Share</button>
+            </div>
+
+        </div>
         <div class="main-content">main-content</div>
     </div>
 </body>
