Main content basic layourt

--- a/index.html
+++ b/index.html
@@ -13,75 +13,190 @@
     <div class="container">
         <div class="sidebar">
             <div class="logo-area">
-                <div class="logo"><img class="logo-img" src="./images/dashboard.png" ></div>
+                <div class="logo"><img class="logo-img" src="./images/dashboard.png"></div>
                 <div class="logo-text">Dashboard</div>
             </div>
             <div class="navbar-area">
                 <ul class="navbar">
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/home.png" >
-                    <li>Home</a></li>
-                </div>
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/profile.png" >
-                    <li>Profile</a></li>
-                </div>
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/messages.png" >
-                    <li>Messages</a></li>
-                </div>
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/history.png" >
-                    <li>History</a></li>
-                </div>
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/tasks.png" >
-                    <li>Tasks</a></li>
-                </div>
-                <div class="nav">
-                    <a href="" ><img class="nav-img" src="./images/community.png" >
-                    <li>Communities</a></li>
-                </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/home.png">
+                            <li>Home
+                        </a></li>
+                    </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/profile.png">
+                            <li>Profile
+                        </a></li>
+                    </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/messages.png">
+                            <li>Messages
+                        </a></li>
+                    </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/history.png">
+                            <li>History
+                        </a></li>
+                    </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/tasks.png">
+                            <li>Tasks
+                        </a></li>
+                    </div>
+                    <div class="nav">
+                        <a href=""><img class="nav-img" src="./images/community.png">
+                            <li>Communities
+                        </a></li>
+                    </div>
                 </ul>
             </div>
             <div class="branding-area">
                 <ul class="branding">
                     <div class="brand">
-                        <a href="" ><img class="brand-img" src="./images/settings.png" >
-                        <li>Settings</a></li>
-                    </div> 
-                    <div class="brand">
-                        <a href="" ><img class="brand-img" src="./images/support.png" >
-                        <li>Support</a></li>
+                        <a href=""><img class="brand-img" src="./images/settings.png">
+                            <li>Settings
+                        </a></li>
                     </div>
-                     <div class="brand">
-                        <a href="" ><img class="brand-img" src="./images/privacy.png" >
-                        <li>Privacy</a></li>
+                    <div class="brand">
+                        <a href=""><img class="brand-img" src="./images/support.png">
+                            <li>Support
+                        </a></li>
+                    </div>
+                    <div class="brand">
+                        <a href=""><img class="brand-img" src="./images/privacy.png">
+                            <li>Privacy
+                        </a></li>
                     </div>
                 </ul>
             </div>
         </div>
         <div class="header">
             <div class="header-section1">
-                <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"  alt=""></button>
+                <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                        alt=""></button>
                 <input type="text" name="searchBar" id="searchBar">
-                <button class="bellBtn btn " type="submit"><img class="btn-img" src="./images/bell.png"  alt=""></button>
-                <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"  alt=""></a>
-                <a class="nameLink  "  href="" >Manpreet Singh Khurana</a>
+                <button class="bellBtn btn " type="submit"><img class="btn-img" src="./images/bell.png" alt=""></button>
+                <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg" alt=""></a>
+                <a class="nameLink  " href="">Manpreet Singh Khurana</a>
             </div>
             <div class="header-section2">
-                <a class="profileBtn2 btn " type="submit"><img class="prof-img2" src="./images/prof-img.jpeg"  alt=""></a>
+                <a class="profileBtn2 btn " type="submit"><img class="prof-img2" src="./images/prof-img.jpeg"
+                        alt=""></a>
                 <div class="headerText">
                     <p class="smallText">Hi there,</p>
                     <p class="largeText">Manpreet Singh (@mskhurana728)</p>
                 </div>
                 <button class="newBtn blueBtn">New</button>
-                <button class="uploadBtn blueBtn" >Upload</button>
+                <button class="uploadBtn blueBtn">Upload</button>
                 <button class="shareBtn blueBtn">Share</button>
             </div>
 
         </div>
-        <div class="main-content">main-content</div>
+        <div class="main-content">
+            <div class="projects-area">
+                <div class="projectText">Your Projects</div>
+                <div class="projects">
+
+                    <div class="articles article1">
+                        <div class="article">
+                            <div class="sideColor"></div>
+                            <div class="article-content">
+                                <p class="articleHeading">Super Cool Project</p>
+                                <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                    accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                    enim.</p>
+                                <div class="articl-btn">
+                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                            alt=""></button>
+                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                            alt=""></button>
+                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                            alt=""></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="articles article2">
+                       <div class="sideColor"></div>
+                        <p class="articleHeading">Super Cool Project</p>
+                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                            enim.</p>
+                        <div class="article-btn">
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                        </div>
+                    </div>
+                    <div class="articles article3">
+                       <div class="sideColor"></div>
+                        <p class="articleHeading">Super Cool Project</p>
+                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                            enim.</p>
+                        <div class="article-btn">
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                        </div>
+                    </div>
+                    <div class="articles article4">
+                       <div class="sideColor"></div>
+                        <p class="articleHeading">Super Cool Project</p>
+                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                            enim.</p>
+                        <div class="article-btn">
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                        </div>
+                    </div>
+                    <div class="articles article5">
+                      <div class="sideColor"></div>
+                        <p class="articleHeading">Super Cool Project</p>
+                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                            enim.</p>
+                        <div class="article-btn">
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                        </div>
+                    </div>
+                    <div class="articles article6">
+                       <div class="sideColor"></div>
+                        <p class="articleHeading">Super Cool Project</p>
+                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                            enim.</p>
+
+                        <div class="article-btn">
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                                    alt=""></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements"></div>
+            <div class="trending"></div>
+        </div>
     </div>
 </body>
 
