html Done for Projects

--- a/index.html
+++ b/index.html
@@ -98,30 +98,34 @@
                 <div class="projects">
 
                     <div class="articles article1">
-                        <div class="article">
+                        
                             <div class="sideColor"></div>
                             <div class="article-content">
                                 <p class="articleHeading">Super Cool Project</p>
-                                <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                                    accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                    Reiciendis
+                                    accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur,
+                                    libero
                                     enim.</p>
-                                <div class="articl-btn">
-                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
-                                            alt=""></button>
-                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
-                                            alt=""></button>
-                                    <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
-                                            alt=""></button>
-                                </div>
+                           </div>
+                            <div class="articl-btn">
+                                <button class="searchBtn btn " type="search"><img class="btn-img"
+                                        src="./images/search.png" alt=""></button>
+                                <button class="searchBtn btn " type="search"><img class="btn-img"
+                                        src="./images/search.png" alt=""></button>
+                                <button class="searchBtn btn " type="search"><img class="btn-img"
+                                        src="./images/search.png" alt=""></button>
                             </div>
-                        </div>
+                       
                     </div>
                     <div class="articles article2">
-                       <div class="sideColor"></div>
-                        <p class="articleHeading">Super Cool Project</p>
-                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
-                            enim.</p>
+                        <div class="sideColor"></div>
+                        <div class="article-content">
+                            <p class="articleHeading">Super Cool Project</p>
+                            <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                enim.</p>
+                        </div>
                         <div class="article-btn">
                             <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
                                     alt=""></button>
@@ -132,11 +136,13 @@
                         </div>
                     </div>
                     <div class="articles article3">
-                       <div class="sideColor"></div>
-                        <p class="articleHeading">Super Cool Project</p>
-                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
-                            enim.</p>
+                        <div class="sideColor"></div>
+                        <div class="article-content">
+                            <p class="articleHeading">Super Cool Project</p>
+                            <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                enim.</p>
+                        </div>
                         <div class="article-btn">
                             <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
                                     alt=""></button>
@@ -147,11 +153,13 @@
                         </div>
                     </div>
                     <div class="articles article4">
-                       <div class="sideColor"></div>
-                        <p class="articleHeading">Super Cool Project</p>
-                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
-                            enim.</p>
+                        <div class="sideColor"></div>
+                        <div class="article-content">
+                            <p class="articleHeading">Super Cool Project</p>
+                            <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                enim.</p>
+                        </div>
                         <div class="article-btn">
                             <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
                                     alt=""></button>
@@ -162,11 +170,13 @@
                         </div>
                     </div>
                     <div class="articles article5">
-                      <div class="sideColor"></div>
-                        <p class="articleHeading">Super Cool Project</p>
-                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
-                            enim.</p>
+                        <div class="sideColor"></div>
+                        <div class="article-content">
+                            <p class="articleHeading">Super Cool Project</p>
+                            <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                enim.</p>
+                        </div>
                         <div class="article-btn">
                             <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
                                     alt=""></button>
@@ -177,11 +187,13 @@
                         </div>
                     </div>
                     <div class="articles article6">
-                       <div class="sideColor"></div>
-                        <p class="articleHeading">Super Cool Project</p>
-                        <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
-                            accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
-                            enim.</p>
+                        <div class="sideColor"></div>
+                        <div class="article-content">
+                            <p class="articleHeading">Super Cool Project</p>
+                            <p class="articleText">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis
+                                accusamus deleniti debitis suscipit excepturi soluta maxime blanditiis? Tenetur, libero
+                                enim.</p>
+                        </div>
 
                         <div class="article-btn">
                             <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
