announcemnt part complete

--- a/index.html
+++ b/index.html
@@ -207,21 +207,23 @@
                 </div>
             </div>
             <div class="announcements">
-                
-                <div class="announcement">
-                    <p class="a-heading">Site Maintenace</p>
-                    <p class="a-text">Lorem, ipsum dolor um nobis quos quasi?</p>
-                    <hr>
-                </div>
-                <div class="announcement">
-                    <p class="a-heading">Site Maintenace</p>
-                    <p class="a-text">Lorem, ipsum dr illo laudantium nobis quos quasi?</p>
-                    <hr>
-                </div>
-                <div class="announcement">
-                    <p class="a-heading">Site Maintenace</p>
-                    <p class="a-text">Lorem, ilaudantium nobis quos quasi?</p>
-                    <hr>
+                <div class="announcement-container">
+                    
+                    <div class="announcement">
+                        <p class="a-heading">Site Maintenace</p>
+                        <p class="a-text">Lorem, ipsum dolor um nobis quos quasi?</p>
+                        <hr>
+                    </div>
+                    <div class="announcement">
+                        <p class="a-heading">Site Maintenace</p>
+                        <p class="a-text">Lorem, ipsum dr illo laudantium nobis quos quasi?</p>
+                        <hr>
+                    </div>
+                    <div class="announcement">
+                        <p class="a-heading">Site Maintenace</p>
+                        <p class="a-text">Lorem, ilaudantium nobis quos quasi?</p>
+                        <hr>
+                    </div>
                 </div>
             </div>
             <div class="trending"></div>
