just left with the logos

--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
 
@@ -127,11 +127,11 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
                     </div>
@@ -144,11 +144,11 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
                     </div>
@@ -161,11 +161,11 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
                     </div>
@@ -178,11 +178,11 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
                     </div>
@@ -196,37 +196,82 @@
                         </div>
 
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
                                     alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/search.png"
+                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
                                     alt=""></button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="announcements">
-                <div class="announcement-container">
-                    
-                    <div class="announcement">
-                        <p class="a-heading">Site Maintenace</p>
-                        <p class="a-text">Lorem, ipsum dolor um nobis quos quasi?</p>
-                        <hr>
-                    </div>
-                    <div class="announcement">
-                        <p class="a-heading">Site Maintenace</p>
-                        <p class="a-text">Lorem, ipsum dr illo laudantium nobis quos quasi?</p>
-                        <hr>
-                    </div>
-                    <div class="announcement">
-                        <p class="a-heading">Site Maintenace</p>
-                        <p class="a-text">Lorem, ilaudantium nobis quos quasi?</p>
-                        <hr>
+                <p class="headingText">Announcements</p>
+
+                <div class="announcement-content">
+                    <div class="announcement-container">
+                        <div class="announcement">
+                            <p class="a-heading">Site Maintenace</p>
+                            <p class="a-text">Lorem, ipsum dolor um nobis quos quasi?</p>
+                            <hr>
+                        </div>
+                        <div class="announcement">
+                            <p class="a-heading">Site Maintenace</p>
+                            <p class="a-text">Lorem, ipsum dr illo laudantium nobis quos quasi?</p>
+                            <hr>
+                        </div>
+                        <div class="announcement">
+                            <p class="a-heading">Site Maintenace</p>
+                            <p class="a-text">Lorem, ilaudantium nobis quos quasi?</p>
+                            <hr>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="trending"></div>
+            <div class="trending">
+                <p class="headingText">Trending</p>
+                <ul class="trending-accounts">
+
+                    <div class="account">
+                        <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
+                                alt=""></a>
+
+
+                        <li>
+                            <div class="username">@tegan</div>
+                            <div class="about">World peace Builder</div>
+                        </li>
+                    </div>
+                    <div class="account">
+                        <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
+                                alt=""></a>
+
+                        <li>
+                            <div class="username">@morgan</div>
+                            <div class="about">Super Cool project</div>
+                        </li>
+                    </div>
+                    <div class="account">
+                        <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
+                                alt=""></a>
+
+                        <li>
+                            <div class="username">@kendall</div>
+                            <div class="about">Life changing app</div>
+                        </li>
+                    </div>
+                    <div class="account">
+                        <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
+                                alt=""></a>
+
+                        <li>
+                            <div class="username">@alex</div>
+                            <div class="about">No traffic master</div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
